# log4cpp

./: CMakeLists.txt  LICENSE.md
include/log4cpp/: RemoteSyslogAppender.hh
src/: PatternLayout.cpp  PropertyConfiguratorImpl.cpp  RemoteSyslogAppender.cpp
